# color_alphabet

./: LICENSE  README.md  colors.py  drawer.py  main.py  phonetics.py  pyproject.toml
