[tool.poetry]
name = "coloralphabet"
version = "0.1.0"
description = ""
authors = ["gabri <gabrielsuazo7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
eng-syl = "4.0.6"
numpy = "1.18.5"
protobuf = "3.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
